--- a/new.html
+++ b/new.html
@@ -25,6 +25,8 @@
                     <div class = "sidebar-headings">
                         <i class="fas fa-calendar-week"></i><strong style="padding-left: 25px; vertical-align: middle;">Year</strong>
                         <ul style="line-height: 20%;">
+                            <li class="yearli"><a class="year">2021</a></li>
+                            <li class="yearli"><a class="year">2020</a></li>
                             <li class="yearli"><a class="year">2019</a></li>
                             <li class="yearli"><a class="year">2018</a></li>
                             <li class="yearli"><a class="year">2017</a></li>
